--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+*{
+  font-family: "Outfit", serif;
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
+ 
+
   font-family: 'Inter', sans-serif;
 }
