--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-*{
-  font-family: "Outfit", serif;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
- 
 
+*{
+  font-family: "Outfit", serif;
+}
+
+body {
   font-family: 'Inter', sans-serif;
 }
